Bug 14989 - Fix a use-after-free in SMB1 server
Summary: Fix a use-after-free in SMB1 server
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.15.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-02-24 11:33 UTC by Volker Lendecke
Modified: 2022-03-15 13:25 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.16.rcNext, 4.15.next. (1.48 KB, patch)
2022-03-01 21:50 UTC, Jeremy Allison
vl: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Volker Lendecke 2022-02-24 11:33:06 UTC

    
Comment 1 Samba QA Contact 2022-03-01 21:00:04 UTC
This bug was referenced in samba master:

8c97743511e4d53f795f2469a28aabfb96da0dfa
Comment 2 Jeremy Allison 2022-03-01 21:50:07 UTC
Created attachment 17180 [details]
git-am fix for 4.16.rcNext, 4.15.next.

Cherry-pick from master. Applies cleanly to 4.15.next, 4.16.rcNext.

Not applicable for 4.14 or below.
Comment 3 Jule Anger 2022-03-02 10:03:56 UTC
Pushed to autobuild-v4-{16,15}-test.
Comment 4 Samba QA Contact 2022-03-02 11:25:14 UTC
This bug was referenced in samba v4-16-test:

9fd10105530fb8c14c36e74de97561b909fc40a6
Comment 5 Samba QA Contact 2022-03-02 12:55:15 UTC
This bug was referenced in samba v4-15-test:

c4b2930a837d817f3da8c7641b1b7201383ea36c
Comment 6 Jule Anger 2022-03-02 14:52:47 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2022-03-08 15:25:09 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.0rc5):

9fd10105530fb8c14c36e74de97561b909fc40a6
Comment 8 Samba QA Contact 2022-03-15 13:25:11 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.6):

c4b2930a837d817f3da8c7641b1b7201383ea36c